--- a/templates/main.html
+++ b/templates/main.html
@@ -4,8 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login page</title>
+    <link href="{{url_for('static', filename='main.css')}}" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+    <h1>User login</h1>
     <form method="POST">
         <table>
             <tr>
@@ -19,10 +21,13 @@
             </tr>
         </table>
     </form>
-    {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
-            {% for message in messages %}
-                {{message}}
+            {% for category, message in messages %}
+                <span class='error'>{{message}}</span>
+                {% if category == 'UU' %}
+                <a href="{{url_for('signin')}}">sign up here</a>
+                {% endif %}
             {% endfor%}
         {% endif %}
     {% endwith %}
