sign up finished

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
     <title>Sign up page</title>
 </head>
 <body>
@@ -15,12 +16,19 @@
                 <td>Password: </td><td>{{signupform.password}}</td>
             </tr>
             <tr>
-                <td>Password again: </td><td>{{signupform.pwdcheck}}</td>
+                <td>Confirm password: </td><td>{{signupform.pwdcheck}}</td>
             </tr>
             <tr>
                 <td colspan="2" style="text-align:center"><input type="submit" value='Sign up'></td>
             </tr>
         </table>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <span class='error'>{{message}}</span>
+            {% endfor%}
+        {% endif %}
+    {% endwith %}
     </form>
 </body>
 </html>
