--- a/templates/strategies.html
+++ b/templates/strategies.html
@@ -3,9 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
     <title>Strategies</title>
 </head>
 <body>
+    <div style="text-align:right">
+        <a href="{{url_for('main')}}">Log off</a>
+    </div>
     this is your strategy:
     <table>
         {% for strategy in strategies %}
@@ -18,5 +22,12 @@
         Create new strategy: <input type="text" name="newstr"><br>
         <input type="submit" value='Create'>
     </form>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for mess in messages %}
+            <span class='error'>{{mess}}</span>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 </body>
 </html>
