--- a/templates/strategies.html
+++ b/templates/strategies.html
@@ -10,7 +10,8 @@
     <div style="text-align:right">
         <a href="{{url_for('main')}}">Log off</a>
     </div>
-    this is your strategy:
+    <h2>Hello, {{username}}</h2>
+    This is your strategy:<br><br>
     <table>
         {% for strategy in strategies %}
         <tr>
