--- a/templates/flextable.html
+++ b/templates/flextable.html
@@ -18,5 +18,8 @@
         </form> 
         {% endfor %}
     </table>
+    <form action="{{url_for('add')}}" method="POST">
+        <input type="text" name="addthis"><input type="submit" value="Add">
+    </form>
 </body>
 </html>
